--- a/dataproj.css
+++ b/dataproj.css
@@ -1,8 +1,3 @@
-
-* {
-	box-sizing: border-box;
-}
-
 html,
 body {
 	height: 100%;
@@ -16,9 +11,13 @@ body {
 
 .content {
 	height: 200%;
-	transform-origin: top left;
-	transition: transform 0.7s cubic-bezier(1, 0.005, 0.24, 1);
 	background-color: #f0f0f0;
+	-webkit-transform-origin: top left;
+	transform-origin: top left;
+	-webkit-transition: -webkit-transform 0.7s cubic-bezier(1, 0.005, 0.24, 1);
+	transition: -webkit-transform 0.7s cubic-bezier(1, 0.005, 0.24, 1);
+	transition: transform 0.7s cubic-bezier(1, 0.005, 0.24, 1);
+	transition: transform 0.7s cubic-bezier(1, 0.005, 0.24, 1), -webkit-transform 0.7s cubic-bezier(1, 0.005, 0.24, 1);
 }
 
 .content_inner {
@@ -56,14 +55,21 @@ body {
 	left: 50%;
 	margin-top: -15px;
 	margin-left: -12px;
+	-webkit-transition: -webkit-transform 0.7s cubic-bezier(1, 0.005, 0.24, 1);
+	transition: -webkit-transform 0.7s cubic-bezier(1, 0.005, 0.24, 1);
 	transition: transform 0.7s cubic-bezier(1, 0.005, 0.24, 1);
+	transition: transform 0.7s cubic-bezier(1, 0.005, 0.24, 1),
+    -webkit-transform 0.7s cubic-bezier(1, 0.005, 0.24, 1);
 }
 
 .menu_toggle .menu_open {
+	-webkit-transform-origin: -100px -100px;
 	transform-origin: -100px -100px;
 }
 
 .menu_toggle .menu_close {
+	-webkit-transform-origin: -100px -160px;
+	-webkit-transform: rotate(20deg);
 	transform: rotate(20deg);
 	transform-origin: -100px -160px;
 }
@@ -80,8 +86,13 @@ body {
 .menu_items li {
 	height: 60px;
 	margin-bottom: 30px;
+	-webkit-transform: translateX(-300px);
 	transform: translateX(-300px);
+	-webkit-transition: -webkit-transform 0.7s 0s cubic-bezier(1, 0.005, 0.24, 1);
+	transition: -webkit-transform 0.7s 0s cubic-bezier(1, 0.005, 0.24, 1);
 	transition: transform 0.7s 0s cubic-bezier(1, 0.005, 0.24, 1);
+	transition: transform 0.7s 0s cubic-bezier(1, 0.005, 0.24, 1),
+    -webkit-transform 0.7s 0s cubic-bezier(1, 0.005, 0.24, 1);
 }
 
 .menu_items li:nth-child(2) {
@@ -98,6 +109,7 @@ body {
 	text-transform: uppercase;
 	letter-spacing: 2px;
 	color: #a3a3a3;
+	-webkit-transition: color 0.2s;
 	transition: color 0.2s;
 }
 
@@ -120,6 +132,7 @@ body {
 	margin-top: -32px;
 	border-radius: 100%;
 	border: 2px solid #f0f0f0;
+	-webkit-transition: border-color 0.2s;
 	transition: border-color 0.2s;
 }
 
@@ -135,20 +148,36 @@ body {
 	color: #f37272;
 }
 
+/* Let's open up the menu */
+.shazam {
+  /*.content_inner {
+    height: 100%;
+  }*/
+}
 
-.shazam .content {
-transform: rotate(-30deg); }
-.shazam .menu_open {
-transform: rotate(-20deg); }
-.shazam .menu_close {
-transform: rotate(0); }
-.shazam .menu_items li {
-transform: translateX(0);
-transition: transform 0.35s 0.45s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
-.shazam .menu_items li:nth-child(2) {
-  transition-delay: 0.47s; }
-.shazam .menu_items li:nth-child(3) {
-  transition-delay: 0.48s; }
+.shazam.content {
+	-webkit-transform: rotate(-30deg);
+	transform: rotate(-30deg); }
+.shazam.menu_open {
+	-webkit-transform: rotate(-20deg);
+	transform: rotate(-20deg); }
+.shazam.menu_close {
+	-webkit-transform: rotate(0);
+	transform: rotate(0); }
+.shazam.menu_items li {
+	transform: translateX(0);
+	transition: transform 0.35s 0.45s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+	-webkit-transition: -webkit-transform 0.35s 0.45s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+	transition: -webkit-transform 0.35s 0.45s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+	transition: transform 0.35s 0.45s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+	transition: transform 0.35s 0.45s cubic-bezier(0.175, 0.885, 0.32, 1.275),
+	-webkit-transform 0.35s 0.45s cubic-bezier(0.175, 0.885, 0.32, 1.275);}
+.shazam.menu_items li:nth-child(2) {
+	-webkit-transition-delay: 0.47s;
+	transition-delay: 0.47s; }
+.shazam.menu_items li:nth-child(3) {
+	-webkit-transition-delay: 0.48s;
+	transition-delay: 0.48s; }
 
 h1 {
   padding-bottom: 15px;
