--- a/HTML/dataproj.css
+++ b/HTML/dataproj.css
@@ -1,187 +1,282 @@
-html,
-body {
-	height: 100%;
-	overflow: hidden;
+/*! Reset.css */
+
+
+html {
+  font-family: sans-serif;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%
 }
 
-.page {
-	height: 100%;
-	background-color: #584e4a;
+body { margin: 0 }
+
+article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary { display: block }
+
+audio, canvas, progress, video {
+  display: inline-block;
+  vertical-align: baseline
 }
 
-.content {
-	height: 200%;
-	background-color: #f0f0f0;
-	-webkit-transform-origin: top left;
-	transform-origin: top left;
-	-webkit-transition: -webkit-transform 0.7s cubic-bezier(1, 0.005, 0.24, 1);
-	transition: -webkit-transform 0.7s cubic-bezier(1, 0.005, 0.24, 1);
-	transition: transform 0.7s cubic-bezier(1, 0.005, 0.24, 1);
-	transition: transform 0.7s cubic-bezier(1, 0.005, 0.24, 1), -webkit-transform 0.7s cubic-bezier(1, 0.005, 0.24, 1);
+audio:not([controls]) {
+  display: none;
+  height: 0
+}
+[hidden], template {
+display:none
 }
 
-.content_inner {
-	height: 50%;
-	overflow-y: auto;
-	padding: 50px 20%;
-}
+a { background-color: transparent }
 
-/* basically all styling from now on */
-.menu_toggle {
-	z-index: 900;
-	position: fixed;
-	top: 0;
-	left: 0;
-	display: block;
-	cursor: pointer;
-	width: 100px;
-	height: 80px;
-	background-color: #f37272;
-	border-bottom-right-radius: 100%;
-}
+a:active, a:hover { outline: 0 }
 
-.menu_toggle:active i {
-	opacity: 0.8;
-}
+abbr[title] { border-bottom: 1px dotted }
 
-.menu_toggle i {
-	color: #f0f0f0;
-}
+b, strong { font-weight: bold }
 
-.menu_toggle .menu_open,
-  .menu_toggle .menu_close {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	margin-top: -15px;
-	margin-left: -12px;
-	-webkit-transition: -webkit-transform 0.7s cubic-bezier(1, 0.005, 0.24, 1);
-	transition: -webkit-transform 0.7s cubic-bezier(1, 0.005, 0.24, 1);
-	transition: transform 0.7s cubic-bezier(1, 0.005, 0.24, 1);
-	transition: transform 0.7s cubic-bezier(1, 0.005, 0.24, 1),
-    -webkit-transform 0.7s cubic-bezier(1, 0.005, 0.24, 1);
-}
-
-.menu_toggle .menu_open {
-	-webkit-transform-origin: -100px -100px;
-	transform-origin: -100px -100px;
-}
-
-.menu_toggle .menu_close {
-	-webkit-transform-origin: -100px -160px;
-	-webkit-transform: rotate(20deg);
-	transform: rotate(20deg);
-	transform-origin: -100px -160px;
-}
-
-.menu_items {
-	position: fixed;
-	bottom: 0;
-	left: 50px;
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-}
-
-.menu_items li {
-	height: 60px;
-	margin-bottom: 30px;
-	-webkit-transform: translateX(-300px);
-	transform: translateX(-300px);
-	-webkit-transition: -webkit-transform 0.7s 0s cubic-bezier(1, 0.005, 0.24, 1);
-	transition: -webkit-transform 0.7s 0s cubic-bezier(1, 0.005, 0.24, 1);
-	transition: transform 0.7s 0s cubic-bezier(1, 0.005, 0.24, 1);
-	transition: transform 0.7s 0s cubic-bezier(1, 0.005, 0.24, 1),
-    -webkit-transform 0.7s 0s cubic-bezier(1, 0.005, 0.24, 1);
-}
-
-.menu_items li:nth-child(2) {
-	margin-left: 40px;
-}
-
-.menu_items li:nth-child(3) {
-	margin-left: 80px;
-}
-
-.menu_items a {
-	display: block;
-	text-decoration: none;
-	text-transform: uppercase;
-	letter-spacing: 2px;
-	color: #a3a3a3;
-	-webkit-transition: color 0.2s;
-	transition: color 0.2s;
-}
-
-.menu_items a .icon {
-	position: relative;
-	display: inline-block;
-	margin-right: 25px;
-	color: #f0f0f0;
-}
-
-.menu_items a .icon:after {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	content: "";
-	display: block;
-	width: 60px;
-	height: 60px;
-	margin-left: -33px;
-	margin-top: -32px;
-	border-radius: 100%;
-	border: 2px solid #f0f0f0;
-	-webkit-transition: border-color 0.2s;
-	transition: border-color 0.2s;
-}
-
-.menu_items a:hover {
-	color: #f0f0f0;
-}
-
-.menu_items a:hover .icon:after {
-	border-color: #f37272;
-}
-
-.menu_items a:active .icon {
-	color: #f37272;
-}
-
-/* Let's open up the menu */
-.shazam {
-  /*.content_inner {
-    height: 100%;
-  }*/
-}
-
-.shazam.content {
-	-webkit-transform: rotate(-30deg);
-	transform: rotate(-30deg); }
-.shazam.menu_open {
-	-webkit-transform: rotate(-20deg);
-	transform: rotate(-20deg); }
-.shazam.menu_close {
-	-webkit-transform: rotate(0);
-	transform: rotate(0); }
-.shazam.menu_items li {
-	transform: translateX(0);
-	transition: transform 0.35s 0.45s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-	-webkit-transition: -webkit-transform 0.35s 0.45s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-	transition: -webkit-transform 0.35s 0.45s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-	transition: transform 0.35s 0.45s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-	transition: transform 0.35s 0.45s cubic-bezier(0.175, 0.885, 0.32, 1.275),
-	-webkit-transform 0.35s 0.45s cubic-bezier(0.175, 0.885, 0.32, 1.275);}
-.shazam.menu_items li:nth-child(2) {
-	-webkit-transition-delay: 0.47s;
-	transition-delay: 0.47s; }
-.shazam.menu_items li:nth-child(3) {
-	-webkit-transition-delay: 0.48s;
-	transition-delay: 0.48s; }
+dfn { font-style: italic }
 
 h1 {
-  padding-bottom: 15px;
-  border-bottom: 1px solid #ddd; }
+  font-size: 2em;
+  margin: 0.67em 0
+}
 
-body {
-  color: #584e4a; }
+mark {
+  background: #ff0;
+  color: #000
+}
+
+small { font-size: 80% }
+
+sub, sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline
+}
+
+sup { top: -0.5em }
+
+sub { bottom: -0.25em }
+
+img { border: 0 }
+
+svg:not(:root) { overflow: hidden }
+
+figure { margin: 1em 40px }
+
+hr {
+  -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+  box-sizing: content-box;
+  height: 0
+}
+
+pre { overflow: auto }
+
+code, kbd, pre, samp {
+  font-family: monospace, monospace;
+  font-size: 1em
+}
+
+button, input, optgroup, select, textarea {
+  color: inherit;
+  font: inherit;
+  margin: 0
+}
+
+button { overflow: visible }
+
+button, select { text-transform: none }
+
+button, html input[type="button"], input[type="reset"], input[type="submit"] {
+  -webkit-appearance: button;
+  cursor: pointer
+}
+
+button[disabled], html input[disabled] { cursor: default }
+button::-moz-focus-inner, input::-moz-focus-inner {
+border:0;
+padding:0
+}
+
+input { line-height: normal }
+
+input[type="checkbox"], input[type="radio"] {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 0
+}
+input[type="number"]::-webkit-inner-spin-button, input[type="number"]::-webkit-outer-spin-button {
+height:auto
+}
+
+input[type="search"] {
+  -webkit-appearance: textfield;
+  -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+  box-sizing: content-box
+}
+input[type="search"]::-webkit-search-cancel-button, input[type="search"]::-webkit-search-decoration {
+-webkit-appearance:none
+}
+
+fieldset {
+  border: 1px solid #c0c0c0;
+  margin: 0 2px;
+  padding: 0.35em 0.625em 0.75em
+}
+
+legend {
+  border: 0;
+  padding: 0
+}
+
+textarea { overflow: auto }
+
+optgroup { font-weight: bold }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0
+}
+
+td, th { padding: 0 }
+
+body { font-family: 'Open Sans', sans-serif; }
+
+#navigation {
+  width: 100%;
+  height: 100vh;
+  background-color: #243040;
+  position: fixed;
+  top: 0;
+  left: 0;
+  font-size: 33px;
+}
+
+#navigation nav { padding: 120px 34px; }
+
+#navigation nav a {
+  display: block;
+  margin-bottom: 25px;
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.7);
+}
+
+#main-content {
+  height: 100vh;
+  width: 100vw;
+  position: relative;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  z-index: 2;
+}
+
+#main-content.tilt {
+  overflow: hidden;
+  pointer-events: none;
+}
+
+#main-content.tilt #content-front {
+  -webkit-transform: rotate(10deg) translateZ(0);
+  transform: rotate(10deg) translateZ(0);
+}
+
+#content-front {
+  pointer-events: auto;
+  position: relative;
+  z-index: 3;
+  background-color: white;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
+  -webkit-transform-origin: center 70%;
+  -ms-transform-origin: center 70%;
+  transform-origin: center 70%;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+#container section {
+  height: 600px;
+  text-align: center;
+}
+
+#container section:first-of-type { padding-top: 10vh; }
+
+#container section:first-of-type h1 { font-size: 45px; }
+
+#container section:first-of-type p { font-size: 25px; }
+@media (max-width: 600px) {
+
+#container section:first-of-type { padding-top: 15vh; }
+
+#container section:first-of-type h1 { font-size: 30px; }
+
+#container section:first-of-type p { font-size: 18px; }
+}
+
+#container section:nth-of-type(2n) { background-color: #edf1f5; }
+
+.hamburger {
+  position: fixed;
+  z-index: 4;
+  top: 30px;
+  left: 30px;
+  width: 45px;
+  height: 34px;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.hamburger span { position: relative; }
+
+.hamburger span, .hamburger span:before, .hamburger span:after {
+  display: block;
+  width: 45px;
+  height: 6px;
+  background-color: #243040;
+  border-radius: 2px;
+}
+
+.hamburger span:before, .hamburger span:after {
+  content: '';
+  position: absolute;
+}
+
+.hamburger span:before { bottom: -14px; }
+
+.hamburger span:after { bottom: -28px; }
+
+.close {
+  position: fixed;
+  top: 30px;
+  left: 30px;
+  width: 45px;
+  height: 34px;
+  cursor: pointer;
+}
+
+.close:before, .close:after {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 45px;
+  height: 6px;
+  top: 50%;
+  background-color: white;
+  border-radius: 2px;
+}
+
+.close:before {
+  -webkit-transform: translateY(-50%) rotate(45deg);
+  -ms-transform: translateY(-50%) rotate(45deg);
+  transform: translateY(-50%) rotate(45deg);
+}
+
+.close:after {
+  -webkit-transform: translateY(-50%) rotate(-45deg);
+  -ms-transform: translateY(-50%) rotate(-45deg);
+  transform: translateY(-50%) rotate(-45deg);
+}
